-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.17.0
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/121653cb-8935-4279-9416-11c9403c7136
test_94 failed with the following error:
Disk usr quotas
Filesystem quota_id kbytes bquota blimit bgrace files iquota ilimit igrace
/mnt/lustre root 0 0 100000 - 0 0 0 -
/mnt/lustre 100 0 0 100000 - 0 0 0 -
Disk grp quotas
Filesystem quota_id kbytes bquota blimit bgrace files iquota ilimit igrace
/mnt/lustre root 0 0 100000 - 0 0 0 -
/mnt/lustre users 0 0 100000 - 0 0 0 -
Disk prj quotas
Filesystem quota_id kbytes bquota blimit bgrace files iquota ilimit igrace
/mnt/lustre projid100 0 0 100000 - 0 0 0 -
sanity-quota test_94: @@@@@@ FAIL: Quota prj projid100 val 100000 not expected
Test session details:
clients: https://build.whamcloud.com/job/lustre-master/4652 - 5.14.0-570.37.1.el9_6.x86_64
servers: https://build.whamcloud.com/job/lustre-master/4652 - 5.14.0-570.37.1_lustre.el9.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-quota test_94 - Quota prj projid100 val 100000 not expected
- is related to
-
LU-14535 add option for LFS to get all quota information
-
- Resolved
-
- mentioned in
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...