LU-19355 quota: add option to print qid value

When using "lfs quota -a" to print the quota of all quota IDs,
adding one new option "-n" to print the value of the quota IDs
instead of the name of these quota IDs.

Signed-off-by: Hongchao Zhang <hongchao@whamcloud.com>
Change-Id: I120096285742f7e0028bd27107fb189b0927598c
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61326
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>